@@ -1,5 +1,5 @@
 
-module glide_enmabal
+module glint_enmabal
 
   !*FD The energy and mass-balance model
 
@@ -7,8 +7,8 @@ contains
 
 	subroutine enmabal
 
-    !*FD Dummy subroutine, called from calcacab
+    !*FD Dummy subroutine
 
   end subroutine enmabal
 
-end module glide_enmabal
+end module glint_enmabal
